[refactorig] dependencies